fix for background focus z-index

--- a/internal/DateComponentPicker/DateComponentPicker.module.less
+++ b/internal/DateComponentPicker/DateComponentPicker.module.less
@@ -27,6 +27,7 @@
 		.focusBackground {
 			left: 10%;
 			width: calc(80% + @agate-picker-padding / 2);
+			z-index: 0;
 		}
 
 		&::before {
